add: added a section for test series
